added a test component - main

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
     <div class="panel-heading">Status</div>
     <div class="panel-body">
       <h3>{{title}}</h3>
+      <app-main></app-main>
     </div>
   </div>
 </div>
