--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,8 @@
     <div class="panel-heading">Status</div>
     <div class="panel-body">
       <h3>{{title}}</h3>
-      <app-main></app-main>
+      
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
