added receipt form

--- a/src/app/components/mainapp/menu/menu.component.html
+++ b/src/app/components/mainapp/menu/menu.component.html
@@ -1,5 +1,6 @@
   <div class="col-sm-2 sidenav">
-    <p><a href="#">Link</a></p>
-    <p><a href="#">Link</a></p>
-    <p><a href="#">Link</a></p>
+    <p><a href="#">New Receipts</a></p>
+    <p><a href="#">Search & Edit</a></p>
+    <p><a href="#">New Deposits</a></p>
+    <p><a href="#">Search & Edit</a></p>
   </div>
