--- a/src/app/components/mainapp/main/main.component.html
+++ b/src/app/components/mainapp/main/main.component.html
@@ -14,7 +14,7 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="mainapp/recepits">About</a></li>
+          <li><a href="mainapp/recepits">Receipts</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
