got inter component comm going

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,3 +14,5 @@
       
     </div>
 </div>
+<p><a href="signup">Open Account (must have BT email)</a></p>
+<p><a href="forgotpassword">Forgot Password</a></p>
