added part of forgot password function

--- a/src/app/components/forgotpassword/forgotpassword.component.html
+++ b/src/app/components/forgotpassword/forgotpassword.component.html
@@ -8,7 +8,10 @@
       
           <button class="btn btn=primary" type="submit"  >Request Verification Code</button>  
       </form>
-      <button (click)="myEvent($event)">Refresh</button>
-      <label id="msg">{{ message.text }}</label> 
+      <div class="col-sm-8 col-sm-offset-2">
+        <div *ngIf="message" class="alert alert-danger">{{message}}</div>
+       
+      </div>
+      
   </div>
 </div>
