--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,18 +1,34 @@
-<div class="row">
-    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-        <form (ngSubmit)="onLogin(f)" #f="ngForm">
-            <div class="form-group">
-              <label for="id">Login Name</label>
-              <input type="text" id="loginname" name="loginname" ngModel class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" ngModel class="form-control">
-            </div>
-            <button class="btn btn=primary" type="submit">Login</button>  
+
+
+<div class="container">
+        <div class="col-md-6 col-md-offset-3">
+        <form class="form-signin" (ngSubmit)="onLogin(f)" #f="ngForm">
+          <h2 class="form-signin-heading">Please sign in</h2>
+          <label for="loginname" class="sr-only">Login name</label>
+          <input type="email" id="loginname" class="form-control" placeholder="user name" name="loginname" ngModel class="form-control" required autofocus>
+          <label for="inputPassword" class="sr-only">Password</label>
+          <input type="password" id="password" class="form-control" placeholder="Password" name="password" ngModel class="form-control" required>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" value="remember-me"> Remember me
+            </label>
+          </div>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </form>
-      
+        <div class="col-sm-8 col-sm-offset-2">
+                <div *ngIf="message" class="alert alert-danger">{{message}}</div>
+               
+              </div>
+        </div>
+      </div> <!-- /container -->
+      <div class="row">
+          <p></p>
+            <div class="col-md-6 col-md-offset-3">
+           
+                    <p><a href="signup">Open Account (must have BT email)</a></p>
+                    <p><a href="forgotpassword">Forgot Password</a></p>
+           
+            </div>
+            
+    
     </div>
-</div>
-<p><a href="signup">Open Account (must have BT email)</a></p>
-<p><a href="forgotpassword">Forgot Password</a></p>
