--- a/src/app/components/logout/logout.component.html
+++ b/src/app/components/logout/logout.component.html
@@ -1,3 +1,6 @@
-<p>
-  logout works!
-</p>
+<div class="jumbotron vertical-center"> 
+    
+  <div class="container text-center">
+    <h1>You are logged out !</h1>
+  </div>
+</div>
