--- a/src/app/components/mainapp/main/main.component.html
+++ b/src/app/components/mainapp/main/main.component.html
@@ -14,13 +14,13 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="mainapp/recepits">Receipts</a></li>
+          <li><a href="mainapp/receipts">Receipts</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#"><span class="glyphicon glyphicon-user"></span> Config</a></li>
-          <li><a href="#" (click)="logout()"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+          <li><a href="logout" ><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
       </div>
     </div>
