fixed login flow and sign up messages

--- a/src/app/components/mainapp/menu/menu.component.html
+++ b/src/app/components/mainapp/menu/menu.component.html
@@ -4,3 +4,8 @@
     <p><a href="#">New Deposits</a></p>
     <p><a href="#">Search & Edit</a></p>
   </div>
+  <div *ngIf = "edited">
+    <strong>List Saved!</strong> Your changes has been saved.
+  </div>
+
+  
