--- a/src/app/components/mainapp/menu/menu.component.html
+++ b/src/app/components/mainapp/menu/menu.component.html
@@ -1,11 +1,16 @@
   <div class="col-sm-2 sidenav">
-    <p><a href="#">New Receipts</a></p>
-    <p><a href="#">Search & Edit</a></p>
-    <p><a href="#">New Deposits</a></p>
-    <p><a href="#">Search & Edit</a></p>
+    <div *ngIf = "access <=2">
+      <p><a href="#">New Receipts</a></p>
+      <p><a href="#">Search & Edit</a></p>
+    </div>
+    <div *ngIf = "access == 2">
+      <p><a href="#">New Deposits</a></p>
+      <p><a href="#">Search & Edit</a></p>
+    </div>
+    <div *ngIf = "access == 3">
+      <a href="#">ADMIN</a>
+    </div>
   </div>
-  <div *ngIf = "edited">
-    <strong>List Saved!</strong> Your changes has been saved.
-  </div>
+  
 
   
