--- a/src/app/components/mainapp/main/main.component.html
+++ b/src/app/components/mainapp/main/main.component.html
@@ -9,17 +9,16 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
         </button>
-        <a class="navbar-brand" href="#">Logo</a>
+        <a class="navbar-brand" href="#">>BT<</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="mainapp/receipts">Receipts</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Contact</a></li>
+         
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Config</a></li>
+         
+          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Logged in: {{username}}</a></li>
           <li><a href="logout" ><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
       </div>
