--- a/src/app/components/mainapp/admin/admin.component.html
+++ b/src/app/components/mainapp/admin/admin.component.html
@@ -1,24 +1,49 @@
-<app-main></app-main>
-<div class="container-fluid text-center">    
-  <div class="row content">
-    
-  <app-menu></app-menu>
-   <div class="col-sm-8 text-left"> 
-    <h1>Manage account users</h1>
-    <a  (click)="DoWork(1)" >click</a>
-    <p>{{tokenage}}</p>
-    <h2>....</h2>
-    <p>{{data}}</p>
-
-
-    </div>
-    <div class="col-sm-2 sidenav">
-      <div class="well">
-        <p>ADS</p>
-      </div>
-      <div class="well">
-        <p>ADS</p>
-      </div>
-    </div>
+<div class="example-container mat-elevation-z8">
+   
+  
+    <mat-table #table [dataSource]="dataSource" class="example-table"
+               matSort matSortActive="created" matSortDisableClear matSortDirection="asc">
+  
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+  
+      <!-- Number Column -->
+      <ng-container matColumnDef="username">
+        <mat-header-cell *matHeaderCellDef>User</mat-header-cell>
+        <mat-cell *matCellDef="let row">{{ row.username }}</mat-cell>
+      </ng-container>
+  
+      <!-- Title Column -->
+      <ng-container matColumnDef="access">
+        <mat-header-cell *matHeaderCellDef>Role</mat-header-cell>
+        <mat-cell *matCellDef="let row">{{ row.access }}</mat-cell>
+      </ng-container>
+  
+      <!-- State Column -->
+      <ng-container matColumnDef="email">
+        <mat-header-cell *matHeaderCellDef>Email</mat-header-cell>
+        <mat-cell *matCellDef="let row">{{ row.email }}</mat-cell>
+      </ng-container>
+  
+      <!-- Created Column -->
+      <ng-container matColumnDef="timestamp">
+        <mat-header-cell *matHeaderCellDef
+                         mat-sort-header
+                         disableClear="true">
+          Date Regn.
+        </mat-header-cell>
+        <mat-cell *matCellDef="let row">{{ row.timestamp | date }}</mat-cell>
+      </ng-container>
+  
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+  
+    <mat-paginator [length]="resultsLength" [pageSize]="30">
+    </mat-paginator>
   </div>
-</div>
+  
+  
+  <!-- Copyright 2018 Google Inc. All Rights Reserved.
+      Use of this source code is governed by an MIT-style license that
+      can be found in the LICENSE file at http://angular.io/license -->
