added table row selection

--- a/src/app/components/mainapp/admin/admin.component.html
+++ b/src/app/components/mainapp/admin/admin.component.html
@@ -44,7 +44,12 @@
       </ng-container>
   
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectRow(row)"> <button mat-button (click)="openDialog()">Open dialog</button></mat-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectRow(row)" 
+      [ngClass]="{'highlight': selectedRowIndex == row.username}"
+      (mouseover)="highlight(row)"> </mat-row>
+
+      
+      
     </mat-table>
   
     <mat-paginator [length]="resultsLength" [pageSize]="30">
