--- a/src/app/components/mainapp/main/main.component.html
+++ b/src/app/components/mainapp/main/main.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
+          <li class="active"><a  [routerLink]="['/mainapp/receipts']">Home</a></li>
          
         </ul>
         <ul class="nav navbar-nav navbar-right">
