--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -5,11 +5,11 @@
         <form class="form-signin" (ngSubmit)="onSignup(f)" #f="ngForm">
             <div class="form-group">
               <label for="id">Username</label>
-              <input type="text" id="loginname" name="loginname" ngModel class="form-control">
+              <input type="text" id="loginname" name="loginname" ngModel class="form-control" required>
             </div>
             <div class="form-group">
               <label for="id">Office eMail</label>
-              <input type="text" id="email" name="email" ngModel class="form-control">
+              <input type="text" id="email" name="email" ngModel class="form-control" required>
             </div>
             <div class="form-group">
               <label for="id">Phone Number</label>
@@ -17,13 +17,25 @@
             </div>
             <div class="form-group">
                 <label for="password">Choose Password (min 8 characters long)</label>
-                <input type="password" id="password" name="password" ngModel class="form-control">
+                <input type="password" id="password" name="password" ngModel class="form-control" requried> 
             </div>
             <div class="form-group">
               <label for="password">Password again </label>
-              <input type="password" id="password2" name="password2" ngModel class="form-control">
-          </div>
-            <button  class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>  
+              <input type="password" id="password2" name="password2" ngModel class="form-control" required>
+            </div>
+            <div class="form-group">
+              <mat-form-field>
+                  <label for="office">Office </label>
+                <mat-select  [(ngModel)]="selectedValue" class="form-control" name="selectedValue" required>
+                  <mat-option *ngFor="let office of offices" [value]="office.value">
+                    {{ office.viewValue }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <div class="form-group">
+            <button  class="btn btn-lg btn-primary btn-block" type="submit"  [disabled]="!f.valid">Sign Up</button>  
+            </div>
         </form>
         <div class="col-sm-8 col-sm-offset-2">
           <div class="alert alert-danger" *ngIf="index == 1">{{message}}</div>
