partial search working

--- a/src/app/components/mainapp/editreceipt/editreceipt.component.css
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.css
@@ -74,6 +74,16 @@
 input.ng-invalid.ng-touched {
   border: 1px solid red;
 }
+.paytype-radio-group {
+  display: inline-flex;
+  flex-direction: row;
+}
 
-  
+.paytype-radio-button {
+  margin: 5px;
+}
+
+.paytype-selected-value {
+  margin: 15px 0;
+}
   
