--- a/src/app/components/mainapp/editreceipt/editreceipt.component.css
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.css
@@ -86,4 +86,6 @@ input.ng-invalid.ng-touched {
 .paytype-selected-value {
   margin: 15px 0;
 }
-  
+.highlight{
+  background: rgb(104, 113, 190); /* green */
+}
