fixed the expand panel open /close

--- a/src/app/components/mainapp/editreceipt/edit-receipts.html
+++ b/src/app/components/mainapp/editreceipt/edit-receipts.html
@@ -6,7 +6,7 @@
  <p>{{data.payload.invoice}}</p>
  <p>{{data.payload.rcvdfrom}}</p>
  <p>{{data.payload.paytype}}</p>
- <p>{{data.payload.remarks}}</p>
+ <p>{{data.payload.amount}}</p>
  
   <div mat-dialog-actions>
     <button mat-raised-button	 (click)="onNoClick()">Cancel</button>
